MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/SalesOrder__c.object-meta.xml
<CustomObject>
    <label>Sales Order</label>
    <nameField>
        <displayFormat>SO-{00000}</displayFormat>
        <label>Sales Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>