MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Acount_Email__c.field-meta.xml
<CustomField>
    <fullName>Acount_Email__c</fullName>
    <formula>CustomerAccount__r.PersonContact.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acount Email</label>
    <type>Text</type>
</CustomField>