MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Actual_ADM_Fee__c.field-meta.xml
<CustomField>
    <fullName>Actual_ADM_Fee__c</fullName>
    <formula>(ADM_Fees__c) * TotalAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual ADM Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>