MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/ADM_Dari_Fee_Collected_Date__c.field-meta.xml
<CustomField>
    <fullName>ADM_Dari_Fee_Collected_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ADM + Dari Fee Collected Date</label>
    <type>Date</type>
</CustomField>