MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/ADM_Fees__c.field-meta.xml
<CustomField>
    <fullName>ADM_Fees__c</fullName>
    <defaultValue>0.02</defaultValue>
    <label>ADM Fees %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>