MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/ADM_Fees_and_Dari__c.field-meta.xml
<CustomField>
    <fullName>ADM_Fees_and_Dari__c</fullName>
    <label>ADM Fees and Dari Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Generated</fullName>
            </value>
            <value>
                <fullName>Collected</fullName>
                <label>Uploaded</label>
            </value>
            <value>
                <fullName>Partially Collected</fullName>
                <label>Partially Uploaded</label>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Partially Paid</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Reversed</fullName>
            </value>
            <value>
                <fullName>Collected – Ops</fullName>
            </value>
            <value>
                <fullName>Received – Finance Ops</fullName>
            </value>
            <value>
                <fullName>Rejected by Sales Ops - Submitted to Sales</fullName>
            </value>
            <value>
                <fullName>Rejected By Finance - Submitted to Sales Ops</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>