MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/ADM_Fees_Dari_charges__c.field-meta.xml
<CustomField>
    <fullName>ADM_Fees_Dari_charges__c</fullName>
    <formula>(ADM_Fees__c * TotalAmount__c) + Daricharges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ADM Fees + Dari charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>