MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/ADM_Fees_Dari_charges_Cleared_Date__c.field-meta.xml
<CustomField>
    <fullName>ADM_Fees_Dari_charges_Cleared_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ADM Fees + Dari charges Cleared Date</label>
    <type>Date</type>
</CustomField>