MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/ADM_Fees_Dari_charges_Reversal_Reason__c.field-meta.xml
<CustomField>
    <fullName>ADM_Fees_Dari_charges_Reversal_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ADM Fees + Dari charges Reversal Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>