MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/ADM_Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>ADM_Registration_Status__c</fullName>
    <description>Tracks ADM registration status for the Sales Order.

Not Initiated: No ADM service request.

In Progress: ADM request exists, not closed.

Registered: ADM request is Closed.</description>
    <label>ADM Registration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Initiated</fullName>
                <default>true</default>
                <label>Not Initiated</label>
            </value>
            <value>
                <fullName>In-progress</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>