MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/AlertMessage__c.field-meta.xml
<CustomField>
    <fullName>AlertMessage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AlertMessage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>