MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Amount_Due_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Amount_Due_to_Date__c</fullName>
    <description>Please update the date in Filter Criteria every time before use</description>
    <label>Amount Due to Date</label>
    <summarizedField>SalesOrderInstallments__c.InstallmentAmount__c</summarizedField>
    <summaryFilterItems>
        <field>SalesOrderInstallments__c.MilestoneDate__c</field>
        <operation>lessOrEqual</operation>
        <value>5/15/2025</value>
    </summaryFilterItems>
    <summaryForeignKey>SalesOrderInstallments__c.SalesOrder__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>