MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/AutoEndDate__c.field-meta.xml
<CustomField>
    <fullName>AutoEndDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AutoEndDate</label>
    <type>DateTime</type>
</CustomField>