MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/AutoUpdateDate__c.field-meta.xml
<CustomField>
    <fullName>AutoUpdateDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AutoUpdateDate</label>
    <type>DateTime</type>
</CustomField>