MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/BasePrice8Y_AED__c.field-meta.xml
<CustomField>
    <fullName>BasePrice8Y_AED__c</fullName>
    <formula>BasePrice8Y_EGP__c / 13.1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BasePrice8Y AED</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>