MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/BasePrice8Y_EGP__c.field-meta.xml
<CustomField>
    <fullName>BasePrice8Y_EGP__c</fullName>
    <label>Base Price 8Y EGP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>