MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/BookingWithoutPDCs__c.field-meta.xml
<CustomField>
    <fullName>BookingWithoutPDCs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Booking Without PDCs</label>
    <type>Checkbox</type>
</CustomField>