MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Broker_Agency__c.field-meta.xml
<CustomField>
    <fullName>Broker_Agency__c</fullName>
    <formula>Opportunity__r.BrokerAgency__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Agency</label>
    <type>Text</type>
</CustomField>