MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Broker_Agency_Address__c.field-meta.xml
<CustomField>
    <fullName>Broker_Agency_Address__c</fullName>
    <formula>Opportunity__r.BrokerAgency__r.BillingStreet + &apos; &apos; + &apos; &apos; + Opportunity__r.BrokerAgency__r.BillingState + &apos; &apos; + Opportunity__r.BrokerAgency__r.BillingCity + &apos; &apos; + Opportunity__r.BrokerAgency__r.BillingCountry + &apos; &apos; + Opportunity__r.BrokerAgency__r.BillingPostalCode</formula>
    <label>Broker Agency Address</label>
    <type>Text</type>
</CustomField>