MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Broker_Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Broker_Agency_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Agency Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Orders List</relationshipLabel>
    <relationshipName>Sales_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>