MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Broker_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Broker_Agent_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Broker Agent Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sales Orders (Broker Agent Name)</relationshipLabel>
    <relationshipName>Sales_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>