MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Broker_Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>Broker_Registration_Type__c</fullName>
    <description>Formula field to capture the Broker Registration Type, enabling identification of the International and other Brokers.</description>
    <formula>BrokerAgency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Broker Registration Type</label>
    <type>Text</type>
</CustomField>