MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Bucket__c.field-meta.xml
<CustomField>
    <fullName>Bucket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bucket</label>
    <referenceTo>Bucket__c</referenceTo>
    <relationshipLabel>Sales Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>