MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/CancellationReason__c.field-meta.xml
<CustomField>
    <fullName>CancellationReason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upgrade Unit</fullName>
            </value>
            <value>
                <fullName>Downgrade Unit</fullName>
            </value>
            <value>
                <fullName>Change Unit</fullName>
            </value>
            <value>
                <fullName>Change of Payment Plan</fullName>
            </value>
            <value>
                <fullName>Client Request</fullName>
            </value>
            <value>
                <fullName>Sales Operation Request</fullName>
            </value>
            <value>
                <fullName>Management Request</fullName>
            </value>
            <value>
                <fullName>Equity Transfer</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Default Unit Cancellation</fullName>
            </value>
            <value>
                <fullName>Customer Requested Cancellation</fullName>
            </value>
            <value>
                <fullName>Without Refund</fullName>
            </value>
            <value>
                <fullName>Reason 1</fullName>
                <isActive>false</isActive>
                <label>Reason 1</label>
            </value>
            <value>
                <fullName>Reason 2</fullName>
                <isActive>false</isActive>
                <label>Reason 2</label>
            </value>
            <value>
                <fullName>Reason 3</fullName>
                <isActive>false</isActive>
                <label>Reason 3</label>
            </value>
            <value>
                <fullName>Reason 4</fullName>
                <isActive>false</isActive>
                <label>Reason 4</label>
            </value>
            <value>
                <fullName>Reason 5</fullName>
                <isActive>false</isActive>
                <label>Reason 5</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>