MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Category_Of_Sale__c.field-meta.xml
<CustomField>
    <fullName>Category_Of_Sale__c</fullName>
    <formula>/*IF(
    NOT(ISBLANK(Unit__r.Launch_Date__c)),
    IF(( Booking_Date__c  - Unit__r.Launch_Date__c) &gt; 14, &apos;Inventory Sales&apos;,&apos;Launch Sales&apos;),
    IF(
        NOT(ISBLANK(Unit__r.Phase__r.LaunchStartDate__c)),
        IF((Booking_Date__c   - Unit__r.Phase__r.LaunchStartDate__c) &gt; 14, &apos;Inventory Sales&apos;, &apos;Launch Sales&apos;),
        IF(
            NOT(ISBLANK(Unit__r.Phase__r.Project__r.Launch_Date__c)),
            IF((Booking_Date__c   - Unit__r.Phase__r.Project__r.Launch_Date__c) &gt; 14, &apos;Inventory Sales&apos;, &apos;Launch Sales&apos;),
            &apos;Inventory Sales&apos;
        )
    )
)


IF(AND(NOT(ISNULL(Unit_Launch_Date__c)),( Booking_Date__c  -  Unit_Launch_Date__c ) &gt; 14), &apos;Inventory Sales&apos;,&apos;Launch Sales&apos;) */

/***** Based On the recent change ******/

IF(
(Unit__r.Unit_Sold_Date__c - Unit__r.Unit_Launch_Date__c) &lt;= 14,
&quot;Launch Sales&quot;,
&quot;Inventory Sales&quot;
)</formula>
    <label>Category Of Sale</label>
    <type>Text</type>
</CustomField>