MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Classification_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Classification_Level_2__c</fullName>
    <formula>CustomerAccount__r.Classification_Level_2__c</formula>
    <label>Classification Level 2</label>
    <type>Text</type>
</CustomField>