MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/ClientName__c.field-meta.xml
<CustomField>
    <fullName>ClientName__c</fullName>
    <formula>if(CustomerAccount__r.RecordType.DeveloperName == &apos;PersonAccount&apos;, CustomerAccount__r.FirstName + &apos; &apos; + CustomerAccount__r.LastName, CustomerAccount__r.Name)</formula>
    <label>Client Name</label>
    <type>Text</type>
</CustomField>