MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Collect_Amount__c.field-meta.xml
<CustomField>
    <fullName>Collect_Amount__c</fullName>
    <label>Collect Amount %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>