MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Collected_Down_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Collected_Down_Payment_Amount__c</fullName>
    <label>Collected Down Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>