MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Collection_Associate__c.field-meta.xml
<CustomField>
    <fullName>Collection_Associate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection Associate</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Orders7</relationshipName>
    <type>Lookup</type>
</CustomField>