MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Commission_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Commission_Percentage__c</fullName>
    <formula>IF(
OR(
Unit__r.Category__c = &quot;MEGA MANSIONS&quot;,
Unit__r.Category__c = &quot;MANSIONS&quot;
),
/* MANSIONS / MEGA MANSIONS logic */
CASE(ProjectName__c,
&quot;Nawayef West&quot;,
IF(DATEVALUE(CreatedDate) &lt;= DATE(2024, 11, 30),
&quot;2%&quot;,
&quot;3%&quot;
),
&quot;Nawayef East&quot;,
IF(DATEVALUE(CreatedDate) &lt;= DATE(2024, 11, 30),
&quot;2%&quot;,
&quot;3%&quot;
),
&quot;AED 0 (0%)&quot;
),
/* Non-mansion logic */
CASE(ProjectName__c,
&quot;Al Naseem&quot;,
IF(DATEVALUE(CreatedDate) &lt;= DATE(2024, 11, 30),
&quot;2%&quot;,
&quot;4%&quot;
),
&quot;Muheira&quot;,
&quot;4%&quot;,
&quot;Maysan&quot;,
&quot;3%&quot;,
&quot;Nawayef West&quot;,
IF(DATEVALUE(CreatedDate) &lt;= DATE(2024, 11, 30),
&quot;2%&quot;,
&quot;4%&quot;
),
&quot;Nawayef East&quot;,
IF(DATEVALUE(CreatedDate) &lt;= DATE(2024, 11, 30),
&quot;2%&quot;,
&quot;4%&quot;
),
&quot;Nawayef Park View&quot;,
&quot;3%&quot;,
&quot;Nawayef Village Townhouses&quot;,
&quot;4%&quot;,
&quot;&quot;
)
)</formula>
    <label>Commission Percentage (SO Creation)</label>
    <type>Text</type>
</CustomField>