MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Completed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date_Time__c</fullName>
    <formula>IF(
    ISPICKVAL(Status__c, &quot;Completed&quot;),
    TEXT(TIMEVALUE(NOW())),
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed Date Time</label>
    <type>Text</type>
</CustomField>