MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/ComplianceDocumentStatus__c.field-meta.xml
<CustomField>
    <fullName>ComplianceDocumentStatus__c</fullName>
    <formula>IF(  AND(ComplianceStatus__c = &apos;Approved&apos;, KYCandWealthForm__c = &apos;Signed&apos;,  ReservationForm__c = &apos;Signed&apos;) , &apos;Completed&apos;, &apos;In Progress&apos;)</formula>
    <label>Compliance &amp; Document Status</label>
    <type>Text</type>
</CustomField>