MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/ComplianceStatus__c.field-meta.xml
<CustomField>
    <fullName>ComplianceStatus__c</fullName>
    <formula>/*if( ISPICKVAL(PrimaryContact__r.ComplianceStatus__c, &apos;Approved&apos;), &apos;Approved&apos;, TEXT( PrimaryContact__r.PassfortApprovalStatus__c ))*/
/*IF( CustomerAccount__r.IsPersonAccount, TEXT( CustomerAccount__r.PassfortApprovalStatus__pc ),TEXT( CustomerAccount__r.PassfortApprovalStatus__c ))*/

IF( CustomerAccount__r.IsPersonAccount, TEXT( CustomerAccount__r.PassfortApprovalStatus__pc ),TEXT( PrimaryContact__r.PassfortApprovalStatus__c ))</formula>
    <label>Compliance Status</label>
    <type>Text</type>
</CustomField>