MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Construction_Email__c.field-meta.xml
<CustomField>
    <fullName>Construction_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Construction Email</label>
    <type>Checkbox</type>
</CustomField>