MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Construction_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Construction_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Construction Email Sent</label>
    <type>Checkbox</type>
</CustomField>