MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/CustAcctId__c.field-meta.xml
<CustomField>
    <fullName>CustAcctId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CustAcctId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>