MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Customer_Management_Associate__c.field-meta.xml
<CustomField>
    <fullName>Customer_Management_Associate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Management Associate</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>