MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <formula>IF(
    BEGINS(CustomerAccount__r.Customer_Segmentation__c , &quot;E&quot;),
    &quot;Elite&quot;,
    &quot;Signature&quot;
)</formula>
    <label>Customer Segment</label>
    <type>Text</type>
</CustomField>