MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/CustomerOraclePartyId__c.field-meta.xml
<CustomField>
    <fullName>CustomerOraclePartyId__c</fullName>
    <formula>CustomerAccount__r.OraclePartyId__c</formula>
    <label>Customer Oracle Party Id</label>
    <type>Text</type>
</CustomField>