MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Daricharges__c.field-meta.xml
<CustomField>
    <fullName>Daricharges__c</fullName>
    <defaultValue>499</defaultValue>
    <label>Dari charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>