MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/DateCheckForSPA__c.field-meta.xml
<CustomField>
    <fullName>DateCheckForSPA__c</fullName>
    <formula>IF(SOCreationDate__c&gt;=  DATE(2025,02,01) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Check For SPA</label>
    <type>Checkbox</type>
</CustomField>