MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/DDA_Status__c.field-meta.xml
<CustomField>
    <fullName>DDA_Status__c</fullName>
    <label>DDA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Initiated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>