MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Discount_on_ADM_fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_on_ADM_fee_Amount__c</fullName>
    <formula>(TotalAmount__c * Discount_on_ADM_Fees__c) 
+ IF(OR(Discount_on_ADM_Fees__c == 0.02, Is_Only_Dari_Fee_Waived__c = TRUE), Daricharges__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount on ADM fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>