MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/DocuSignToday__c.field-meta.xml
<CustomField>
    <fullName>DocuSignToday__c</fullName>
    <formula>today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DocuSignToday</label>
    <type>Date</type>
</CustomField>