MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Down_Payment_Collected_Date__c.field-meta.xml
<CustomField>
    <fullName>Down_Payment_Collected_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Down Payment Collected Date</label>
    <type>Date</type>
</CustomField>