MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Down_Payment_Reversal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Down_Payment_Reversal_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Down Payment Reversal Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>