MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/DownPaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>DownPaymentAmount__c</fullName>
    <label>Down Payment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>