MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Draft_Unit_Plan_Public_URL__c.field-meta.xml
<CustomField>
    <fullName>Draft_Unit_Plan_Public_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Draft Unit Plan Public URL</label>
    <type>Url</type>
</CustomField>