MODON MRE BPDEV/force-app/main/default/objects/SalesOrder__c/fields/Egypt_Cash_Discount__c.field-meta.xml
<CustomField>
    <fullName>Egypt_Cash_Discount__c</fullName>
    <description>This is the discount value, which is difference between current Sales Order Total Installment Amount vs Standard Payment Plan Total Amount.</description>
    <formula>Unit_Selling_Price__c - EgyptTotalInstallmentAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The reduction applied to the Unit Selling Price for the selected payment plan. Calculated as Unit Selling Price minus Total Installment Amount.</inlineHelpText>
    <label>Cash Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>